# lantiq-libcli

./: .gitignore  ChangeLog  Makefile.am  configure.ac
src/: Makefile.am  cli_example.c  lib_cli_config.h  lib_cli_console.c  lib_cli_console.h  lib_cli_core.c  lib_cli_core.h  lib_cli_osmap.h  lib_cli_pipe.c  lib_cli_pipe.h
